# professor

./: .gitignore  LICENSE  README.md  professor.cabal  stack.yaml
app/: Cli.hs  Main.hs  Types.hs  UI.hs  Utils.hs
examples/: professor.prof
src/Professor/: ProfFile.hs
