name:                professor
version:             0.1
synopsis:            Display Tool for .prof file
description:         Please see README.md
homepage:            https://github.com/vincenthz/professor#readme
license:             BSD3
license-file:        LICENSE
author:              Vincent Hanquez
maintainer:          vincent@snarc.org
copyright:           2017 Vincent Hanquez
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Professor.ProfFile
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , foundation
  default-language:    Haskell2010
  ghc-options:         -Wall

executable professor
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Utils
                       UI
                       Types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , text
                     , directory
                     , filepath
                     , vty
                     , brick
                     , vector
                     , professor
  default-language:    Haskell2010

executable professor-cli
  hs-source-dirs:      app
  main-is:             Cli.hs
  other-modules:       Utils
                       Types
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , text
                     , directory
                     , filepath
                     , professor
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/vincenthz/professor
